# aws-assume-role

./: .editorconfig  .gitignore  Makefile  README.rst  pyproject.toml
aws_assume_role/: configuration.py  exceptions.py  manager.py
aws_assume_role/authentication/: __init__.py  authorization.py  authorization_details.py  authorization_writer.py
aws_assume_role/aws/: __init__.py  sts.py
aws_assume_role/cli/: exceptions.py  guided_configuration.py  main.py
aws_assume_role/utils/: typing_utils.py
tests/: test_aws_assume_role.py
tests/utils/: typing_utils_test.py
