[tool.poetry]
name = "aws-assume-role"
version = "0.1.0"
description = ""
authors = ["Aran Moncusí Ramírez <aran@digitalpoet.info>"]

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
boto3 = "^1.26.00"
argparse = "^1.4.0"
pyperclip = "^1.8.2"
configparser = "^5.2.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
